--- a/core/frontend/Branding.html
+++ b/core/frontend/Branding.html
@@ -88,13 +88,10 @@
             <!-- Main content -->
             <main class="main-content">
                 <div class="content-padding">
-                    <!-- Message area -->
-                    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 20px;">
-                        <div id="messageArea" class="message" style="visibility: hidden; opacity: 0; flex: 1;"></div>
-                    </div>
+
 
                     <!-- Branding Section -->
-                    <section class="users-table-section" style="overflow: visible;">
+                    <section class="content-card" style="overflow: visible;">
 
                         <div class="form-row">
                             <!-- Colors Configuration -->
