--- a/core/frontend/Maintenance.html
+++ b/core/frontend/Maintenance.html
@@ -210,15 +210,12 @@
       <!-- Main content -->
       <main class="main-content">
         <div class="content-padding">
-          <!-- Message area -->
-          <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
-            <div id="messageArea" class="message" style="visibility: hidden; opacity: 0; flex: 1;"></div>
-          </div>
+
 
           <div id="currentStatus"></div>
 
           <!-- Main Section with White Background -->
-          <section class="users-table-section" style="flex: 0 auto; overflow: visible;">
+          <section class="content-card" style="flex: 0 auto; overflow: visible;">
             <!-- Active Maintenance Section -->
             <div class="settings-card">
               <h3>Active Maintenance Mode</h3>
