--- a/modules/common-codes/frontend/DataIntegrity.html
+++ b/modules/common-codes/frontend/DataIntegrity.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,7 @@
       border-radius: 8px;
       padding: 24px;
       margin-bottom: 24px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .admin-section h2 {
@@ -177,6 +178,7 @@
   <script src="header-component.js?v=8"></script>
   <script src="sidebar-component.js?v=15"></script>
 </head>
+
 <body>
   <div class="dashboard-container">
     <!-- Header -->
@@ -189,12 +191,7 @@
       <!-- Main content -->
       <main class="main-content">
         <!-- Message area with Help button -->
-        <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 20px;">
-          <div id="messageArea" class="message" style="visibility: hidden; opacity: 0; flex: 1;"></div>
-          <button class="btn btn-secondary" id="helpBtn" title="Help" style="min-width: 38px; height: 34px; padding: 6px 10px; flex-shrink: 0; box-sizing: border-box; display: flex; align-items: center; justify-content: center;">
-            <span style="font-weight: bold; font-size: 16px;">?</span>
-          </button>
-        </div>
+
 
         <!-- Data Integrity Check Section -->
         <section class="admin-section">
@@ -209,7 +206,8 @@
           </p>
 
           <button class="btn btn-primary" id="checkIntegrityBtn" onclick="checkDataIntegrity()">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 8px;">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+              style="margin-right: 8px;">
               <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
               <polyline points="22 4 12 14.01 9 11.01"></polyline>
             </svg>
@@ -245,4 +243,5 @@
   <script src="help-modal.js?v=1"></script>
   <script src="DataIntegrity.js?v=1"></script>
 </body>
+
 </html>
