--- a/modules/competition-schedule/frontend/competition-schedule.html
+++ b/modules/competition-schedule/frontend/competition-schedule.html
@@ -8,58 +8,12 @@
     <!-- Core Styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles.css?v=23">
-    <style>
-        .version-badge {
-            font-size: 0.8em;
-            padding: 5px 10px;
-            border-radius: 12px;
-        }
-
-        .status-active {
-            background-color: #d4edda;
-            color: #155724;
-        }
-
-        .status-archived {
-            background-color: #f8f9fa;
-            color: #6c757d;
-        }
-
-        /* Table Styles */
-        .table-responsive {
-            max-height: 70vh;
-            overflow-y: auto;
-        }
-
-        th {
-            position: sticky;
-            top: 0;
-            background-color: var(--table-header-bg);
-            color: var(--table-header-text) !important;
-            z-index: 10;
-            box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Upload Area */
-        .upload-area {
-            border: 2px dashed #ddd;
-            border-radius: 8px;
-            padding: 30px;
-            text-align: center;
-            cursor: pointer;
-            transition: border-color 0.3s;
-            background: #fdfdfd;
-        }
-
-        .upload-area:hover {
-            border-color: #007bff;
-            background: #f0f8ff;
-        }
-    </style>
+    <link rel="stylesheet" href="competition-schedule.css">
 
     <script>
         window.ACTIVE_PAGE = 'competitionSchedule';
         window.PAGE_TITLE = 'Competition Schedule';
+        window.PAGE_DESCRIPTION = 'View the active competition schedule version.';
     </script>
 
     <!-- Core Scripts -->
@@ -76,11 +30,8 @@
             <aside class="sidebar" id="sidebar"></aside>
 
             <main class="main-content">
-                <div class="content-card">
+                <div class="content-padding">
                     <div class="content-card">
-                        <!-- Title and Selector removed as per request -->
-
-
                         <div id="loadingIndicator" class="text-center py-5" style="display: none;">
                             <div class="spinner-border text-primary" role="status">
                                 <span class="sr-only">Loading...</span>
@@ -88,36 +39,36 @@
                             <p class="mt-2 text-muted">Loading Schedule Data...</p>
                         </div>
 
+                        <!-- Dynamic Sheet Title -->
+                        <h4 id="sheetTitleDisplay" class="font-weight-bold mb-3 pl-1"
+                            style="color: var(--brand-color);"></h4>
+
+                        <!-- Sheet Tabs -->
+                        <div id="sheetTabs" class="sheet-tabs-container mb-3"
+                            style="overflow-x: auto; white-space: nowrap; border-bottom: 1px solid #dee2e6;">
+                            <!-- Tabs injected via JS -->
+                        </div>
+
                         <div id="scheduleContainer" class="table-responsive">
                             <table class="table table-hover table-bordered" id="scheduleTable">
-                                <thead>
+                                <!-- Content will be dynamically generated based on Excel headers -->
+                                <tbody class="text-center text-muted">
                                     <tr>
-                                        <th>Sheet</th>
-                                        <th>Date</th>
-                                        <th>Time</th>
-                                        <th>Activity / Task</th>
-                                        <th>Location</th>
-                                        <th>Venue</th>
-                                        <th>Session ID</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <!-- Data will be injected here -->
-                                    <tr>
-                                        <td colspan="7" class="text-center text-muted py-4">Loading active schedule...
-                                        </td>
+                                        <td class="p-4">Loading active schedule...</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                     </div>
+                </div>
+            </main>
             </main>
         </div>
     </div>
 
 
 
-    <script src="script.js?v=22"></script>
+    <script src="script.js?v=25"></script>
 </body>
 
 </html>
