--- a/modules/competition-schedule/frontend/version-management.html
+++ b/modules/competition-schedule/frontend/version-management.html
@@ -210,12 +210,9 @@
                 <span class="close" id="closeConfirmDeleteModal">&times;</span>
             </div>
             <div class="modal-body">
-                <p id="confirmDeleteMessage" style="margin-bottom: 10px; font-weight: 500;"></p>
-                <div id="confirmDeleteList"
-                    style="max-height: 150px; overflow-y: auto; background: #f8f9fa; padding: 10px; border-radius: 4px; font-size: 14px; margin-bottom: 15px;">
-                </div>
-                <p class="text-danger"><small><strong>Warning:</strong> This action cannot be undone and will
-                        permanently delete all associated session data.</small></p>
+                <p id="confirmDeleteMessage" style="margin-bottom: 20px; font-weight: 500;"></p>
+                <div id="confirmDeleteList" style="display: none;"></div>
+                <p class="text-danger"><small><strong>Warning:</strong> This action cannot be undone.</small></p>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" id="cancelDeleteBtn">Cancel</button>
