--- a/modules/event-management/frontend/damaged-items.html
+++ b/modules/event-management/frontend/damaged-items.html
@@ -92,7 +92,7 @@
                             </div>
 
                             <div class="table-container">
-                                <table class="users-table">
+                                <table class="table data-table" id="itemsTable">
                                     <thead>
                                         <tr>
                                             <th class="checkbox-col"><input type="checkbox" id="selectAll"
@@ -139,53 +139,90 @@
         </div>
 
         <!-- ADD/EDIT MODAL -->
-        <!-- ADD/EDIT MODAL -->
-        <div id="itemModal" class="modal"
-            style="display:none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.4);">
-            <div class="modal-content"
-                style="background-color: #fefefe; margin: 2% auto; padding: 20px; border: 1px solid #888; width: 90%; max-width: 600px; border-radius: 8px;">
-                <div class="modal-header"
-                    style="display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; padding-bottom: 15px; margin-bottom: 20px;">
-                    <h3 id="modalTitle" style="margin: 0; color: var(--brand-color);">Add Damaged Item</h3>
-                    <span class="close-btn" id="modalCloseBtn"
-                        style="font-size: 28px; font-weight: bold; cursor: pointer;">&times;</span>
+        <!-- Confirm Delete Modal -->
+        <div id="confirmDeleteModal" class="modal" style="display: none;">
+            <div class="modal-content" style="max-width: 450px;">
+                <div class="modal-header">
+                    <h2>Confirm Deletion</h2>
+                    <span class="close" id="closeConfirmDeleteModal">&times;</span>
                 </div>
-                <div class="modal-body" style="max-height: 70vh; overflow-y: auto; padding-right: 10px;">
-                    <form id="itemForm">
-                        <input type="hidden" id="itemId">
-
-
-
-                        <div class="form-group mb-3">
-                            <label>Item Code</label>
-                            <input type="text" class="form-control" id="itemCode" placeholder="E.g. MIC-001">
-                        </div>
-
-                        <div class="form-group mb-3">
-                            <label>Description *</label>
-                            <textarea class="form-control" id="description" rows="3" required></textarea>
-                        </div>
-
-                        <div class="form-group mb-3">
-                            <label>Status *</label>
-                            <select class="form-control" id="status" required>
-                                <option value="">Select Status</option>
-                                <option value="Damaged">Damaged</option>
-                                <option value="Not Working">Not Working</option>
-                            </select>
-                        </div>
-                    </form>
+                <div class="modal-body">
+                    <p id="confirmDeleteMessage" style="margin-bottom: 10px; font-weight: 500;">Are you sure you want to
+                        delete this?</p>
+                    <p class="text-danger"><small><strong>Warning:</strong> This action cannot be undone.</small></p>
                 </div>
-                <div class="modal-footer"
-                    style="border-top: 1px solid #eee; padding-top: 20px; margin-top: 10px; display: flex; justify-content: flex-end; gap: 10px;">
-                    <button type="button" class="btn btn-primary" id="modalSaveBtn">Save</button>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" id="cancelDeleteBtn">Cancel</button>
+                    <button class="btn btn-danger" id="confirmDeleteBtn">Delete Permanently</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- ADD/EDIT MODAL -->
+    <div id="itemModal" class="modal"
+        style="display:none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.4);">
+        <div class="modal-content"
+            style="background-color: #fefefe; margin: 2% auto; padding: 20px; border: 1px solid #888; width: 90%; max-width: 600px; border-radius: 8px;">
+            <div class="modal-header"
+                style="display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; padding-bottom: 15px; margin-bottom: 20px;">
+                <h3 id="modalTitle" style="margin: 0; color: var(--brand-color);">Add Damaged Item</h3>
+                <span class="close-btn" id="modalCloseBtn"
+                    style="font-size: 28px; font-weight: bold; cursor: pointer;">&times;</span>
+            </div>
+            <div class="modal-body" style="max-height: 70vh; overflow-y: auto; padding-right: 10px;">
+                <form id="itemForm">
+                    <input type="hidden" id="itemId">
+
+
+
+                    <div class="form-group mb-3">
+                        <label>Item Code</label>
+                        <input type="text" class="form-control" id="itemCode" placeholder="E.g. MIC-001">
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <label>Description *</label>
+                        <textarea class="form-control" id="description" rows="3" required></textarea>
+                    </div>
+
+                    <div class="form-group mb-3">
+                        <label>Status *</label>
+                        <select class="form-control" id="status" required>
+                            <option value="">Select Status</option>
+                            <option value="Damaged">Damaged</option>
+                            <option value="Not Working">Not Working</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer"
+                style="border-top: 1px solid #eee; padding-top: 20px; margin-top: 10px; display: flex; justify-content: flex-end; gap: 10px;">
+                <button type="button" class="btn btn-primary" id="modalSaveBtn">Save</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Confirm Delete Modal -->
+    <div id="confirmDeleteModal" class="modal" style="display: none;">
+        <div class="modal-content" style="max-width: 450px;">
+            <div class="modal-header">
+                <h2>Confirm Deletion</h2>
+                <span class="close" id="closeConfirmDeleteModal">&times;</span>
+            </div>
+            <div class="modal-body">
+                <p id="confirmDeleteMessage" style="margin-bottom: 20px; font-weight: 500;"></p>
+                <p class="text-danger"><small><strong>Warning:</strong> This action cannot be undone.</small></p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" id="cancelDeleteBtn">Cancel</button>
+                <button class="btn btn-danger" id="confirmDeleteBtn">Delete Permanently</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
-    <script src="damaged-items.js"></script>
+    <script src="damaged-items.js?v=2"></script>
 </body>
 
 </html>
