feat: implement competition schedule version management and event management module with consultant and item tracking features

--- a/modules/competition-schedule/frontend/version-management.html
+++ b/modules/competition-schedule/frontend/version-management.html
@@ -167,6 +167,8 @@
             </div>
 
             <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                    onclick="document.getElementById('uploadModal').style.display='none'">Cancel</button>
                 <button type="submit" class="btn btn-primary" form="uploadForm">Upload & Process</button>
             </div>
         </div>
@@ -197,6 +199,8 @@
             </div>
 
             <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                    onclick="document.getElementById('editModal').style.display='none'">Cancel</button>
                 <button type="submit" class="btn btn-primary" form="editVersionForm">Update</button>
             </div>
         </div>
