--- a/modules/event-management/frontend/damaged-items.html
+++ b/modules/event-management/frontend/damaged-items.html
@@ -198,6 +198,8 @@
             </div>
             <div class="modal-footer"
                 style="border-top: 1px solid #eee; padding-top: 20px; margin-top: 10px; display: flex; justify-content: flex-end; gap: 10px;">
+                <button type="button" class="btn btn-secondary"
+                    onclick="document.getElementById('itemModal').style.display='none'">Cancel</button>
                 <button type="button" class="btn btn-primary" id="modalSaveBtn">Save</button>
             </div>
         </div>
